# Startreach

./: .example.env  .gitignore  Makefile  pyproject.toml
backend/: conftest.py  factorial.py  init.py  main.py
backend/api/: health.py  users.py
backend/app/: database.py  main.py  models.py
backend/assets/: index.html
backend/contorllers/: __init__.py  auth.py  posts.py  projects.py  users.py  webinars.py
backend/core/: __init__.py  config.py
backend/crud/: __init__.py  users.py
backend/db/: __init__.py  database.py
backend/models/: __init__.py  app_config_model.py  auth_model.py  categories_model.py  global_model.py  health.py  pagination_model.py  posts_model.py  profiles_model.py  projects_model.py  user.py  users_model.py  webinars_model.py
backend/services/: __init__.py  auth_service.py  general_service.py  posts_service.py  profile_service.py  projects_service.py  tokens_service.py  users_service.py  webinars_service.py
backend/tests/: test_app.py
backend/utils/: docs_security.py  exceptions.py  files.py  logger.py  request_handler.py
frontend/: .eslintrc.cjs  .prettierrc.json  README.md  components.json  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  vite.config.ts  vitest.config.ts
frontend/Startreach/: README.md  angular.json  package-lock.json  package.json
frontend/Startreach/src/: index.html  styles.scss
frontend/src/: App.vue  main.ts
frontend/vue-project/: package-lock.json  package.json
supabase/: config.toml  seed.sql  supabase.py
supabase/migrations/: 20240506084425_remote_schema.sql
(+240 files in other folders)
