[tool.poetry]
name = "codeventure"
version = "0.1.0"
description = ""
authors = ["lKryml <gumimash@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.3"
python-dotenv = "^1.0.1"
supabase = "^2.4.3"
bcrypt = "^4.1.2"
black = "^24.4.2"
pylint = "^3.1.0"
jinja2 = "^3.1.4"
pyjwt = "^2.8.0"
python-jose = "^3.3.0"
pytest = "^8.2.1"
jose = "^1.0.0"
pillow = "^10.3.0"
python-multipart = "^0.0.9"
aiofiles = "^23.2.1"
uvicorn = "^0.30.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
